# svd_by_viikoshh

./: SVD.py  main.py  pyproject.toml
